@@ -1,9 +1,3 @@
-v0.6.1?
-- When we encounter an Identity-H encoded text with no ToUnicode table, return a raw bytestream. As far as I can tell, it's impossible
-  to convert these to unicode codepoints, so there's not much we can do about it.
-  See http://www.adobeforums.com/webx/.3bc40438
-  Patented? http://www.freshpatents.com/Method-of-determining-unicode-values-corresponding-to-the-text-in-digital-documents-dt20061221ptan20060288281.php
-
 v0.7
 - Allow the user to only process certain aspects of the PDF file. For example, if they're only
   interested in meta data or bookmarks, there's no point in walking the pages tree.
